# api/docs/swagger.json
@@ -1720,127 +1720,6 @@
                 }
             }
         },
-        "/password-reset": {
-            "post": {
-                "security": [
-                    {
-                        "Locale": []
-                    },
-                    {
-                        "Timezone": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "password-reset"
-                ],
-                "summary": "Request Password Reset",
-                "operationId": "password-reset",
-                "parameters": [
-                    {
-                        "description": "request password reset body",
-                        "name": "passwordReset",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.PasswordResetST"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Token"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/Errors"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/Errors"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/Errors"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/Errors"
-                        }
-                    }
-                }
-            }
-        },
-        "/password-reset/request": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "password-reset"
-                ],
-                "summary": "Request Password Reset",
-                "operationId": "request-password-reset",
-                "parameters": [
-                    {
-                        "description": "request password reset body",
-                        "name": "requestPasswordReset",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.RequestPasswordResetST"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/Errors"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/Errors"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/Errors"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/Errors"
-                        }
-                    }
-                }
-            }
-        },
         "/register": {
             "post": {
                 "security": [
@@ -3055,6 +2934,9 @@
                 },
                 "uri": {
                     "type": "string"
+                },
+                "website": {
+                    "type": "string"
                 }
             }
         },
@@ -3142,14 +3024,23 @@
                 "algorithm": {
                     "type": "string"
                 },
+                "authorization_website": {
+                    "type": "string"
+                },
                 "client_id": {
                     "type": "string"
                 },
                 "description": {
                     "type": "string"
                 },
+                "email_endpoint": {
+                    "type": "string"
+                },
                 "expires_in_seconds": {
                     "type": "integer"
+                },
+                "phone_number_endpoint": {
+                    "type": "string"
                 },
                 "private_key": {
                     "type": "string"
@@ -3159,6 +3050,9 @@
                 },
                 "refresh_expires_in_seconds": {
                     "type": "integer"
+                },
+                "registration_website": {
+                    "type": "string"
                 },
                 "reset_expires_in_seconds": {
                     "type": "integer"
@@ -3499,11 +3393,13 @@
             "required": [
                 "algorithm",
                 "application_id",
+                "authorization_website",
                 "client_id",
                 "created_at",
                 "description",
                 "expires_in_seconds",
                 "id",
+                "password_reset_expires_in_seconds",
                 "refresh_expires_in_seconds",
                 "updated_at",
                 "uri"
@@ -3514,6 +3410,9 @@
                 },
                 "application_id": {
                     "type": "integer"
+                },
+                "authorization_website": {
+                    "type": "string"
                 },
                 "client_id": {
                     "type": "string"
@@ -3531,14 +3430,17 @@
                 "id": {
                     "type": "integer"
                 },
-                "public_key": {
-                    "type": "string"
+                "password_reset_expires_in_seconds": {
+                    "type": "integer"
                 },
-                "public_uri": {
+                "public_key": {
                     "type": "string"
                 },
                 "refresh_expires_in_seconds": {
                     "type": "integer"
+                },
+                "registration_website": {
+                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string",
@@ -3681,14 +3583,23 @@
                 "algorithm": {
                     "type": "string"
                 },
+                "authorization_website": {
+                    "type": "string"
+                },
                 "client_id": {
                     "type": "string"
                 },
                 "description": {
                     "type": "string"
                 },
+                "email_endpoint": {
+                    "type": "string"
+                },
                 "expires_in_seconds": {
                     "type": "integer"
+                },
+                "phone_number_endpoint": {
+                    "type": "string"
                 },
                 "private_key": {
                     "type": "string"
@@ -3698,6 +3609,9 @@
                 },
                 "refresh_expires_in_seconds": {
                     "type": "integer"
+                },
+                "registration_website": {
+                    "type": "string"
                 },
                 "reset_expires_in_seconds": {
                     "type": "integer"
@@ -3963,36 +3877,6 @@
                     "type": "string"
                 },
                 "version": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.PasswordResetST": {
-            "type": "object",
-            "required": [
-                "password",
-                "password_confirmation",
-                "token"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "password_confirmation": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.RequestPasswordResetST": {
-            "type": "object",
-            "required": [
-                "email"
-            ],
-            "properties": {
-                "email": {
                     "type": "string"
                 }
             }
